# musu-bee

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  .musu-indexer.json  .musu_dev.indexer-http.pid  BILINGUAL_RUNTIME_ARCHITECTURE.md  BUTLER_DIAGNOSIS_2026-05-05.md  BUTLER_DIAGNOSIS_2026-05-06.md  BUTLER_FINAL_REPORT_2026-04-28.md  BUTLER_FINAL_REPORT_2026-05-05.md  BUTLER_REPORT_2026-04-28.md  BUTLER_STATUS_REPORT_2026-04-28.md  BUTLER_STATUS_REPORT_2026-05-05.md  CHANGELOG.md  CLAUDE.md  CODEX.MD  CODE_AUDIT_2026-04-08.md  CODE_AUDIT_2026-04-15.md  COMPANY_CAPABILITY_REPATRIATION_MAP.md  COMPANY_STRATEGY.md  CONTRIBUTING.md  CURRENT_STATE.md  DESIGN.md  DOGFOODING_PRODUCT_MODEL.md  EXECUTION_STRATEGY.md  HEARTBEAT.md  INSTALL.md  ISSUE_DIAGNOSIS_2026-04-28.md  LOCAL_WORKER_STATUS_REPORT.md  MARKET_AND_REVENUE_MODEL.md  MASTER_BACKLOG_2026-04-14.md  MASTER_PLAN.md  MODULE_REPATRIATION_EXECUTION_SEQUENCE.md  MUSU_BLUEPRINT.md  NEXT_SESSION_REBOOT_RECOVERY_AND_WORK_PLAN_2026-04-02.md  NEXT_STEPS.md  PAPERCLIP_API_FAILURE_REPORT.md  PAPERCLIP_PROGRAM_REVIEW_2026-04-03.md  (+185 more)
musu-ai-detector/: README.md  pyproject.toml
musu-ai-detector/tests/: test_katfish_filter.py  test_models.py  test_pattern_filter.py  test_router.py  test_store.py
musu-bee/src-tauri/: Cargo.toml  musu-brain.pin.json  tauri.conf.json
musu-bridge/: .env.example  Dockerfile  HANDOFF.md  README.md  __main__.py  a2a.py  audit.py  axis_routes.py  bridge_models.py  channel_circuit_breaker.py  cli.py  company_loader.py  company_templates.py  config.py  cos_briefing_agent.py  csrf_guard.py  diagnostics.py  discovery.py  dispatch_routes.py  handlers.py  heartbeat_scheduler.py  hostname_guard.py  input_guard.py  instruction_learner.py  mesh_router.py  metrics.py  node_identity.py  openai_compat.py  peer_cache.py  pyproject.toml  ralph_loop.py  registry.py  relay_circuit_breaker.py  relay_client.py  requirements-lock.txt  research.py  research_agent.py  runtime_routes.py  sandbox_bash.py  screen_capture.py  (+19 more)
musu-bridge/.musu/: qa_result_20260425_155038.json  qa_result_20260425_155038_iter2.json  qa_result_20260426_phase92.json  sprint_contract_20260425_155038.json  sprint_contract_phase92.json
musu-bridge/_legacy_mattermost/: docker-compose.yml  mattermost.py  setup.py
musu-bridge/instructions/: analytics_lead.md  bw_lead_heartbeat.md  ceo.gemini.md  ceo.md  content_creator.md  content_lead_heartbeat.md  content_radar.md  cos.md  cto.md  engineer.gemini.md  engineer.md  marketing_editor.md  marketing_lead.md  marketing_strategist.md  master_butler_v3.md  musu_dev_setup.py  node_manager.md  project_manager.md  qa.md  social_manager.md  team_lead.md  worker.md
musu-bridge/lib/: model_resolver.py
musu-bridge/monitoring/: grafana_dashboard.json  prometheus_rules.yml
musu-bridge/tests/: conftest.py  test_a2a.py  test_adapter_probe.py  test_agent_control.py  test_agent_patch.py  test_approval_endpoint.py  test_axis_routes.py  test_briefing_wiki_injection.py  test_circuit_breaker.py  test_company_custom.py  test_company_loader.py  test_cos_synthesis_degrade.py  test_cos_synthesis_minimal.py  test_csrf_guard.py  test_dashboard_agents.py  test_e2e_a2a.py  test_e2e_bash.py  test_e2e_diagnostic.py  test_e2e_pipeline.py  test_e2e_ralph.py  test_e2e_workflow.py  test_e2e_workspace.py  test_h_db_write_errors.py  test_h_error_classification.py  test_h_mesh_request_id_propagation.py  test_health_ready.py  test_heartbeat_circuit_breaker.py  test_heartbeat_concurrency_guard.py  test_heartbeat_zombie_cancel.py  test_home_node_forwarding.py  test_hostname_guard.py  test_input_guard.py  test_input_hash_dedup.py  test_instruction_dedup_gate.py  test_intro_seed.py  test_mesh_router_write_toml.py  test_messages_api.py  test_metrics_coverage.py  test_metrics_endpoint.py  test_migration_user_version.py  (+63 more)
musu-computer-tools/musu-chat-spy-engine/: Cargo.toml
musu-control/: INSTALL.md  README.md  pyproject.toml
musu-control/tests/: test_server_delegate_task.py  test_server_error_sanitization.py  test_server_resume_agent.py  test_server_watchdog_policy.py  test_server_write_path_policy.py  test_server_writer_company.py
musu-core/: .coverage  README.md  pyproject.toml
musu-core/tests/: conftest.py  test_adapters.py  test_agents.py  test_approval.py  test_approval_multiprocess.py  test_backend_abc.py  test_ceo_reconciler.py  test_circuit_breaker.py  test_controllers_builder.py  test_controllers_handlers_predicates.py  test_controllers_manager.py  test_controllers_orphan_reconciler.py  test_controllers_qa_loop_reconciler.py  test_controllers_reconciler.py  test_controllers_sources.py  test_controllers_sqlite_contention.py  test_controllers_watch.py  test_controllers_watch_cross_proc.py  test_controllers_workqueue.py  test_db.py  test_disable_rate_limit.py  test_error_codes.py  test_errors.py  test_execute_wake_e2e.py  test_fallback_metrics.py  test_fencing_token.py  test_fleet_runtimes.py  test_fleet_store.py  test_kvstore.py  test_machine_reconciler.py  test_messages.py  test_middleware.py  test_migrations_v29.py  test_migrations_v30.py  test_migrations_v31.py  test_migrations_v32.py  test_migrations_v33.py  test_migrations_v34_v35.py  test_migrations_v36.py  test_purge.py  (+14 more)
musu-rs/: CHANGELOG.md  COMMANDS.md  Cargo.toml  README.md
musu-rs/docs/: V26_W10_REGISTRY_INVARIANT.md
musu-rs/examples/: test_ssot.rs
musu-rs/src/: lib.rs  main.rs
musu-rs/tests/: adapter_real_backend_smoke.rs  agent_record_backward_compat.rs  r10_registry.rs  r13_mcp_http.rs  r2_smoke.rs  r3_companies_get.rs  r3_mcp_smoke.rs  r3_stdout_clean.rs  r4_index_smoke.rs  r4_scanner_perf.rs  r5_smoke.rs  r6_archive_safety.rs  r6_auto_update.rs  r6_install_smoke.rs  r7_peer_register.rs  r9_workflow_dag.rs  w12_deadline_middleware.rs  w6_relay_roundtrip.rs
musu-worker/: README.md  pyproject.toml
musu-worker/tests/: test_security_hardening.py
musu-writer/: README.md  blog_draft_token_usage.md  pyproject.toml  story-structure-research.md
musu-writer/tests/: test_business.py  test_planning_tools.py  test_project_config.py  test_tools.py  (+4 more)
(+6669 files in other folders)
