[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "musu-ai-detector"
version = "0.1.0"
description = "AI text detection MCP tool with 3-stage escalation"
requires-python = ">=3.10"
dependencies = [
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
zippy = ["thinkst-zippy>=0.1.0"]
katfish = [
    "konlpy>=0.6.0",
    "kss>=6.0.4",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
]
all = [
    "musu-ai-detector[mcp,zippy,katfish]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
musu-ai-detector = "musu_ai_detector.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/musu_ai_detector"]
