[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "musu-control"
version = "0.1.0"
description = "Paperclip control plane MCP server — 23 tools via FastMCP"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "httpx>=0.27",
  "mcp>=1.0.0",
]

[project.scripts]
musu-control = "musu_control.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/musu_control"]
