[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "musu-core"
version = "0.1.0"
description = "Lightweight AI agent orchestrator — SQLite backend, claude_local adapter"
readme = {text = "", content-type = "text/plain"}
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "yellowhama", email = "yellowhama@users.noreply.github.com" },
]
dependencies = [
  "httpx>=0.25",
  "fastapi>=0.100",
  "starlette>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "httpx>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/musu_core"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
