[package]
name = "musu-rs"
version = "1.14.0-dev"
edition = "2021"
description = "musu control plane — single-binary Rust replacement for Python musu-bridge/core/control/indexer/writer (V24, panel-reshaped)"
license = "PROPRIETARY"

[[bin]]
name = "musu"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }

# R1 (wiki/491): bridge module deps
sqlx = { version = "0.7", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"] }
subtle = "2"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"
dashmap = "6"
futures-util = "0.3"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
sha2 = "0.10"  # used only for dedup cache key (NOT for auth — see C-SEC-7)
hex = "0.4"
hostname = "0.4"
bytes = "1"
http-body-util = "0.1"

# R5 (wiki/495): writer module deps
tokio-stream = { version = "0.1", features = ["sync"] }

# R3 (wiki/493): control plane MCP server.
# Anthropic-blessed Rust MCP SDK. Pinned at "1.7" minor per Critic C5 / §7
# R3-W1 — if 1.7 yanks or 2.0 breaks, fallback path is rewriting control/
# against jsonrpc-core + tokio stdin/stdout (~300 LOC delta).
# Features: default {base64,macros,server} + transport-io for stdio() helper +
# schemars (re-exported, needed for Parameters/JsonSchema derive in tools).
rmcp = { version = "1.7", features = ["transport-io", "schemars"] }
schemars = "1"
# tokio-util already pulled in transitively (tokio_util::codec via rmcp's
# transport-async-rw); declared explicitly so `CancellationToken` is part of
# our public API surface contract, not an accidental transitive borrow.
tokio-util = { version = "0.7", features = ["rt"] }

# R6 (wiki/496): installer + auto-update + supervisor IPC client deps
dirs = "5"                       # F3 cross-platform home_dir()
ureq = { version = "2", default-features = false, features = ["tls"] }
                                 # auto-update HTTP client (smaller than reqwest)
fs2 = "0.4"                      # F15 advisory file lock for auto-update.lock
getrandom = "0.2"                # S3 explicit CSPRNG for bridge token

[target.'cfg(unix)'.dependencies]
libc = "0.2"
# R6 (wiki/496): release-tarball extraction on Unix.
flate2 = "1"
tar = "0.4.40"                   # S7 — pin minimum for zip-slip mitigations

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_JobObjects", "Win32_System_Console", "Win32_System_Threading", "Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem"] }
# R6 (wiki/496): release-zip extraction + Windows Service registration.
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
                                 # S7 — pin minimum for ZipFile::enclosed_name
windows-service = "0.7"          # F5 / S2 — opt-in --boot-start path

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
# R6 audit-fix (QB6): tower::ServiceExt::oneshot for router-level auth tests.
tower = { version = "0.4", features = ["util"] }
# R3 (wiki/493) test deps:
#  * rmcp `client` feature enables RoleClient + IntoTransport so the smoke
#    test can drive the server in-process via tokio::io::duplex pipes (no
#    subprocess for the MCP plumbing).
#  * wiremock mocks the loopback bridge endpoints that T1 tools proxy to.
rmcp = { version = "1.7", features = ["transport-io", "schemars", "client"] }
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
