[package]
name = "musu-rs"
version = "1.15.0-rc.1"
edition = "2021"
description = "musu control plane — single-binary Rust replacement for Python musu-bridge/core/control/indexer/writer (V24, panel-reshaped)"
license = "PROPRIETARY"

[[bin]]
name = "musu"
path = "src/main.rs"

[[bin]]
name = "musu-startup"
path = "src/bin/musu-startup.rs"

# V26-W1 Commit 3 (wiki/509): library target so out-of-bin integration tests
# (e.g. `tests/agent_record_backward_compat.rs`) can `use musu_rs::core::...`.
# The binary still owns the runtime entry point; lib.rs only re-exports the
# modules that already exist as `mod foo;` in main.rs.
[lib]
name = "musu_rs"
path = "src/lib.rs"

[features]
default = []

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
# V26-W1 Commit 3 (wiki/509 §8.5 / Critic HIGH-3): `preserve_order` keeps
# `serde_json::Map` insertion order stable so the AgentRecord `extra`
# round-trip emits operator-edited YAML in a diff-stable order.
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }

# R1 (wiki/491): bridge module deps
sqlx = { version = "0.7", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"] }
subtle = "2"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json", "multipart"] }
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"
dashmap = "6"
futures-util = "0.3"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
mime_guess = "2"
sha2 = "0.10"  # used only for dedup cache key (NOT for auth — see C-SEC-7)
hex = "0.4"
hostname = "0.4"
bytes = "1"
base64 = "0.22"
http-body-util = "0.1"
# A-3: WebSocket proxy to musu-port (upstream WS client).
tokio-tungstenite = "0.24"
urlencoding = "2"

# R5 (wiki/495): writer module deps
tokio-stream = { version = "0.1", features = ["sync"] }

# R4 (wiki/494): indexer module deps.
#   * `ignore` — ripgrep's gitignore-aware parallel walker. Replaces Python
#     `fnmatch` + the pre-built Go scanner binary. Battle-tested on Windows.
#   * `rayon`  — CPU-bound regex + file-read parallelism per C-R4-11. The
#     scanner uses a rayon thread pool to walk + symbol-extract, then funnels
#     IndexEntry rows through an mpsc channel to the tokio runtime where
#     sqlx batches FTS5 INSERTs. Mixing rayon scope with #[tokio::main] is
#     fine as long as we don't .block_on() inside a rayon worker.
ignore = "0.4"
rayon = "1"
# V27-F9 (file sync): filesystem watcher for real-time sync.
# Also used by indexer watch (previously optional behind indexer-watch feature).
notify = "6.1.1"
enigo = "0.6.1"
# `regex` is already transitive via `tracing-subscriber` / `ignore`; declare
# directly so symbols.rs gets a stable pin and the dep graph stays honest.
regex = "1"

# R3 (wiki/493): control plane MCP server.
# Anthropic-blessed Rust MCP SDK. Pinned at "1.7" minor per Critic C5 / §7
# R3-W1 — if 1.7 yanks or 2.0 breaks, fallback path is rewriting control/
# against jsonrpc-core + tokio stdin/stdout (~300 LOC delta).
# Features: default {base64,macros,server} + transport-io for stdio() helper +
# schemars (re-exported, needed for Parameters/JsonSchema derive in tools).
rmcp = { version = "1.7", features = ["transport-io", "schemars"] }
schemars = "1"
# tokio-util already pulled in transitively (tokio_util::codec via rmcp's
# transport-async-rw); declared explicitly so `CancellationToken` is part of
# our public API surface contract, not an accidental transitive borrow.
tokio-util = { version = "0.7", features = ["rt", "io"] }

# R6 (wiki/496): installer + auto-update + supervisor IPC client deps
dirs = "5"                       # F3 cross-platform home_dir()
ureq = { version = "2", default-features = false, features = ["tls"] }
                                 # auto-update HTTP client (smaller than reqwest)
fs2 = "0.4"                      # F15 advisory file lock for auto-update.lock
getrandom = "0.2"                # S3 explicit CSPRNG for bridge token

# V27-F2 (mDNS auto-discovery): advertise and browse musu nodes on LAN.
mdns-sd = "0.11"
# mdns-sd exposes flume receivers in its public browse API; declare it directly
# so receive-timeout/disconnect handling is explicit instead of inferred.
flume = { version = "0.11", default-features = false }

# V27-F6 (TLS): self-signed cert generation + TLS server.
rcgen = "0.13"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2"

# V26-W1 (wiki/509): OpenAI-compat adapter deps.
#   * `async-trait` needed for the `Adapter` trait until Rust stable supports
#     `async fn` in traits with `?Send` (currently 1.75 stabilised but with
#     caveats; pin async-trait for now to keep MSRV flexibility + dyn-safety).
#   * Runtime HTTP uses existing `reqwest` directly so vLLM tool-call variants
#     with missing tagged `type` fields can be parsed defensively.
async-trait = "0.1"
local-ip-address = "0.6.13"
# W14 Context Transport requires cross-platform zip support
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
walkdir = "2"
arboard = "3.6.1"
webrtc = "0.17.1"
xcap = "0.9.6"
image = "0.25.10"
portable-pty = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
# R6 (wiki/496): release-tarball extraction on Unix.
flate2 = "1"
tar = "0.4.40"                   # S7 — pin minimum for zip-slip mitigations

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_JobObjects", "Win32_System_Console", "Win32_System_Threading", "Win32_System_Diagnostics_ToolHelp", "Win32_System_SystemInformation", "Win32_System_Registry", "Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_Storage_Packaging_Appx"] }
windows = { version = "0.58", features = ["ApplicationModel", "Foundation"] }
windows-service = "0.7"          # F5 / S2 — opt-in --boot-start path

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
# R6 audit-fix (QB6): tower::ServiceExt::oneshot for router-level auth tests.
tower = { version = "0.4", features = ["util"] }
# R3 (wiki/493) test deps:
#  * rmcp `client` feature enables RoleClient + IntoTransport so the smoke
#    test can drive the server in-process via tokio::io::duplex pipes (no
#    subprocess for the MCP plumbing).
#  * wiremock mocks the loopback bridge endpoints that T1 tools proxy to.
rmcp = { version = "1.7", features = ["transport-io", "schemars", "client"] }
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
