[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "musu-worker"
version = "0.1.0"
description = "musu remote execution worker — FastAPI server on :9700"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.100",
  "uvicorn[standard]>=0.24",
  "httpx>=0.25",
]

[project.scripts]
musu-worker = "musu_worker.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/musu_worker"]
