[package]
name = "musu-connectsd"
version = "0.1.0"
edition = "2021"

[dependencies]
musu-connects-core = { path = "../../crates/musu-connects-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quinn = "0.11"
tokio = { version = "1", features = ["full"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pki-types = "1"
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
