[package]
name = "musu-connects-core"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
ring = "0.17"
rustls-pki-types = "1"
dashmap = "6"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
mdns-sd = "0.13"
stun-types = "0.1"
hex = "0.4"
