[package]
name = "musu-port-core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["json", "ws"] }
dashmap = "6"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
url = "2"
