[package]
name = "musu-supervisor-isolation-macos"
version = "0.1.0"
edition = "2021"
description = "macOS sandbox-exec (Seatbelt) sandbox for musu-supervisor"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
musu-supervisor-isolation = { path = "../musu-supervisor-isolation" }

[target.'cfg(target_os = "macos")'.dependencies]
# Pure-shell wrapper around /usr/bin/sandbox-exec for the v1 impl.
# No native deps needed.
