[package]
name = "musu-supervisor-isolation-windows"
version = "0.1.0"
edition = "2021"
description = "Windows AppContainer + Job Object sandbox for musu-supervisor"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
musu-supervisor-isolation = { path = "../musu-supervisor-isolation" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.57", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
