[package]
name = "musu-supervisor-isolation"
version = "0.1.0"
edition = "2021"
description = "Cross-platform sandbox trait + IsolationProfile for agent processes"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
serde_json = "1"
